--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.21",
+    "@react-email/tailwind": "^0.0.18",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.13",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
+    "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^3.4.0",
     "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
